[package]
name = "filt"
version = "0.1.0"
authors = ["akakou <s16003@tokyo.kosen-ac.jp>"]

[dependencies]
router = "*"
serde_json = "1.0"
config = "0.9"
hyper-native-tls = "0.2.4"
base64 = "0.9.2"

[dependencies.iron]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
